Project

General

Profile

Actions

Bug #15028

closed

Deep-flatten incorrectly updates fast-diff stats

Added by Jason Dillaman about 8 years ago. Updated over 6 years ago.

Status:
Resolved
Priority:
High
Assignee:
Target version:
-
% Done:

0%

Source:
other
Tags:
Backport:
Regression:
No
Severity:
4 - irritation
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

Flattening a clone of an empty image with fast-diff and deep-flatten enabled results in all objects being flagged as dirty. The copy-up operation needs to not flag the object as dirty if the parent object didn't exist.

Actions #1

Updated by Douglas Fuller almost 8 years ago

  • Status changed from New to 17
  • Assignee set to Douglas Fuller
  • Severity changed from 3 - minor to 4 - irritation
Actions #2

Updated by Douglas Fuller almost 8 years ago

  • Status changed from 17 to In Progress
Actions #3

Updated by Venky Shankar over 7 years ago

  • Assignee changed from Douglas Fuller to Venky Shankar
Actions #4

Updated by Venky Shankar over 7 years ago

  • Status changed from In Progress to Fix Under Review
Actions #5

Updated by Jason Dillaman over 6 years ago

  • Status changed from Fix Under Review to Resolved
Actions

Also available in: Atom PDF