rbd: Create fewer empty objects

In many cases, we unconditionally create empty objects (of size 0) when
performing layered writes. While functionally correct, this causes tools
like rbd du to space is allocated (since they conservatively assume all
objects are full). Detect empty writes and bail out early. This is
particularly helpful for operations like flatten, which create all
objects that might exist in an image.

Fixes: http://tracker.ceph.com/issues/15028
Signed-off-by: Douglas Fuller <dfuller@redhat.com>